# identity-link-api-aqua

./: .gitignore  README.md
.husky/: pre-commit
client/: .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierrc  README.md  firebase.json  package-lock.json  package.json
client/.husky/: pre-commit
client/aqua/: did-document-service.aqua  github-requester.aqua  github.aqua  identity-link-router.aqua  twitter-identity-link-service.aqua  twitter-requester.aqua  twitter.aqua
client/public/: index.html
client/src/: App.tsx  identity-link-router.json  index.tsx  setting.ts
client/src/_aqua/: did-document-service.ts  github-identity-link-service.ts  github-requester.ts  github.ts  twitter-identity-link-service.ts  twitter-requester.ts  twitter.ts
client/src/helpers/: did.ts  index.ts  stream.ts  use.ts  wallet.ts
client/src/state/: index.ts
docs/: IdentityLinkService.drawio
scripts/: ansi-parser.js  base58.js  extract-hex.js  gen-keypairs.sh  generate-key-pair.js
services/: .gitignore  README.md
services/github/: Cargo.toml  Config.toml  README.md  build.sh
services/github/src/: api.rs  challenge.rs  main.rs  requests.rs  results.rs  sql.rs  tests.rs
services/identity-link-router/: Cargo.toml  Config.toml  README.md  build.sh  config.json  deploy.sh
services/identity-link-router/src/: api.rs  main.rs  register.rs  sql.rs  verifier.rs
services/identity-link-service/: .editorconfig  .env  .env.example  .eslintrc  .prettierrc  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+50 files in other folders)
