[package]
name = "identity-link-router"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "identity-link-router"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
rust-crypto-wasm = "0.3.1"
rand = "0.8.4"
chrono = { version = "0.4.19", features = ["serde"] }
marine-rs-sdk = { version = "0.6.14", features = ["logger"] }
marine-sqlite-connector = "0.5.1"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.68"
log = "0.4.14"

[dev-dependencies]
marine-rs-sdk-test = "0.3.0"
